CID-58 fixed overflow issue for commit card component

--- a/src/features/github/commit-card/commit-card.scss
+++ b/src/features/github/commit-card/commit-card.scss
@@ -1,11 +1,14 @@
 .commit-message-container, .commit-info-container {
+    border: 1px solid transparent;
     display: flex;
     flex-direction: row;
     align-items: center;
-    margin-top: 2px;
 
     .committer-name {
-        max-width: 75px;
+        padding-left: 0;
+        padding-right: 0px;
+        margin-right: 5px;
+        max-width: 85px;
         font-size: 1.03em;
 
         .url {
@@ -26,12 +29,13 @@
     }
 
     .branch-badge {
-        margin-left: 4px;
-        margin-right: 3px;
+        margin-left: 5px;
+        margin-right: 4px;
         margin-top: 3px;
     }
 
     .repository-name {
+        padding-left: 0;
         max-width: 155px;
     }
 }
